cabal-version: >=2.0
name: jmonkey-example
version: 0.0.1
build-type: Simple

executable jmonkey-example
    main-is: Main.hs
    hs-source-dirs: web
    ghc-options:
    - -threaded
    - -rtsopts
    - -with-rtsopts=-N
    build-depends:
        base >= 4.7 && < 5
      , jmonkey
      , lucid
      , clay
      , warp
      , wai
      , http-types
      , text
      , casing
    default-language: Haskell2010

